updated: fix font being black on mobile sometimes

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -6,6 +6,7 @@
 
 body {
 	background-color: var(--bg);
+	color: var(--fg);
 	margin: 0;
 	padding: 0;
 	font-family: 'Times New Roman', Times, serif;
